--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-auth": "^4.23.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^2.7.3",
     "styled-components": "^5.3.11",
     "typescript": "5.1.6"
   },
